--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "@handsontable/react": "10.0.0",
+    "create-index": "^2.6.0",
     "handsontable": "^10.0.0",
     "hyperformula": "1.2.0",
     "react": "^17.0.2",
